fix spacing bugs

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -174,6 +174,7 @@ p
   grid-template-columns: 5rem 1.75fr 15rem
   grid-gap: 1rem 2rem
   line-height: 1.3
+  align-items: first baseline;
   // outline: 1px dashed lightgray
   // > * 
     // outline: 1px dashed lightblue
@@ -203,6 +204,9 @@ p
   
   .cv-section--awards &
     grid-template-columns: 10rem 1fr
+    > *
+      max-width: 31rem
+
     @media (max-width: #{$mobile})
       grid-template-columns: 5rem 1fr
     
@@ -210,7 +214,7 @@ p
   .cv-section--conference-presentations &
     grid-template-columns: 5rem 3fr 10rem
     > *
-      max-width: 40rem
+      max-width: 30rem
     .location 
       grid-row: 1 / 2
     @media (max-width: #{$tablet})
@@ -221,8 +225,6 @@ p
         grid-row: initial
 
   .cv-section--campus-presentations &
-    .event
-      grid-column: 2 / 3
     .institution
       grid-row: 1 / 2
       @media (max-width: #{$mobile})
@@ -242,7 +244,7 @@ p
 
 
   .cv-section--teaching-experience &
-    grid-template-columns: 10rem 1fr 1fr
+    grid-template-columns: 10rem 1.5fr 1fr
     .institution 
       grid-row: 1 / 2
     @media (max-width: #{$mobile}) 
@@ -271,6 +273,8 @@ p
   .cv-section--university-service &,
   .cv-section--department-service &, 
     grid-template-columns: 9rem 1fr 
+    > * 
+      max-width: 25em
     @media (max-width: #{$mobile})
       grid-template-columns: 6rem 1fr
   
@@ -313,13 +317,17 @@ p
   grid-column: 2 / 3
   align-self: flex-start
 
+.event 
+  text-indent: 0
+  margin-top: 1em
+
 .institution 
   grid-column: 3 / 4
   @media (max-width: #{$mobile}) 
     grid-column: 2 / 3
 
 .institution-location  
-  margin-top: .5em
+  margin-top: .25em
 
 // .interest
 
